# ducksync

./: .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake
.cache/clangd/: compile_commands.json
.cache/clangd/release/: compile_commands.json
.github/: dependabot.yml
.github/workflows/: MainDistributionPipeline.yml
docs/: COMPATIBILITY.md  MANUAL_TESTING.md  manual_test.sh
plans/: ducksync_v1.5_prep.md
scripts/: schema.sql  setup_snowflake_permissions.sql  setup_test_snowflake.sql
src/: cleanup_manager.cpp  ducksync_extension.cpp  metadata_manager.cpp  query_router.cpp  refresh_orchestrator.cpp  storage_manager.cpp
src/include/: cleanup_manager.hpp  duckdb_compat.hpp  ducksync_extension.hpp  metadata_manager.hpp  query_router.hpp  refresh_orchestrator.hpp  storage_manager.hpp
test/: README.md  docker-compose.yml  run_snowflake_tests.sh  run_tests.sh  test_pushdown_viability.sh  test_quack_control_plane_backend.sh  test_show_tables_metadata.sh
test/sql/: test_ast_rewriting.test  test_basic.test  test_errors.test  test_quack_server.test  test_replacement_scan_cache_hits.test  test_schema_param.test
